customers/b01/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-prod
  namespace: traefik
spec:
  ports:
    - port: 2283
      targetPort: 443
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: immich-prod
  namespace: traefik
subsets:
  - addresses:
      - ip: 144.2.66.218
    ports:
      - port: 443
