customers/b01/traefik/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: immich-route-prod
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostSNI(`immich.mckensy.xyz`)
      services:
        - name: b01-home-mck-service
          port: 443
